5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1831_3184.log
== TEST (2019-06-13 16:12:31) 
-- CODE:
from numpy import *
for i vet ("digite o vetor: ")

-- ERROR:
File "XXXX", line 2
    for i vet ("digite o vetor: ")
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:12:45) 
-- CODE:
from numpy import *
for ("digite o vetor: ")

-- ERROR:
File "XXXX", line 2
    for ("digite o vetor: ")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:13:09) 
-- CODE:
from numpy import *

-- EXECUTION TIME:
0.976503
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:

-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:

-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:27:04) 
-- CODE:
from numpy import *

-- EXECUTION TIME:
0.823837
-- TEST CASE 1:
---- input:
['x','p','m','k','e','c','a']
---- correct output:
['a' 'c' 'e' 'k' 'm' 'p' 'x']
---- user output:

-- TEST CASE 2:
---- input:
['f','e','e','d','c','b','a']
---- correct output:
['a' 'b' 'c' 'd' 'e' 'e' 'f']
---- user output:

-- TEST CASE 3:
---- input:
['n','l','k','i','e','b']
---- correct output:
['b' 'e' 'i' 'k' 'l' 'n']
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
